--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build --webpack",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint",
     "test-stealth": "ts-node scripts/testStealthAddress.ts",
     "run-fluid": "ts-node scripts/runFluid.ts",
     "test-erc5564": "ts-node scripts/testERC5564.ts"
@@ -15,27 +15,31 @@
     "@fluidkey/stealth-account-kit": "^1.0.0",
     "@rainbow-me/rainbowkit": "^2.0.0",
     "@tanstack/react-query": "^5.0.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "ethers": "^6.0.0",
     "framer-motion": "^12.23.12",
-    "motion": "^12.23.12",
-    "next": "15.4.5",
+    "lucide-react": "^0.555.0",
+    "motion": "^12.23.25",
+    "next": "16.0.10",
     "pino-pretty": "^13.1.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "tailwind-merge": "^3.3.1",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "tailwind-merge": "^3.4.0",
     "ts-node": "^10.9.0",
     "typescript": "^5",
     "wagmi": "^2.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.4.5",
+    "eslint": "^9",
+    "eslint-config-next": "16.0.10",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0"
   }
 }
